[gd_scene load_steps=9 format=3 uid="uid://dy1a4pe5wyeeh"]

[ext_resource type="Script" uid="uid://d1wwvxm65ltxc" path="res://ui/hud/reticle.gd" id="1_khptx"]
[ext_resource type="Script" uid="uid://p0of23jmq5oe" path="res://ui/hud/user_interface.gd" id="1_vk4me"]
[ext_resource type="Theme" uid="uid://xo06b8irr4vi" path="res://ui/themes/debug.tres" id="2_8wkqy"]
[ext_resource type="Script" uid="uid://bjhragyop8lm4" path="res://ui/hud/debug_panel.gd" id="3_02bek"]
[ext_resource type="Script" uid="uid://oiuqx6ctiadm" path="res://ui/hud/context_component.gd" id="6_36lb2"]
[ext_resource type="LabelSettings" uid="uid://bquimv1uo6jwn" path="res://ui/hud/weapon_infos_label_settings.tres" id="6_yd38f"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yd38f"]
load_path = "res://.godot/imported/keyboard_f_outline.png-a939d3c27d415637daa05e885054fd73.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_uwo1s"]
font_size = 24

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_vk4me")

[node name="Reticle" type="CenterContainer" parent="." node_paths=PackedStringArray("RETICLE_LINES")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khptx")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]

[node name="Top" type="Line2D" parent="Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("2_8wkqy")
script = ExtResource("3_02bek")

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WeaponInfos" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponInfos"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WeaponInfos/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="WeaponInfos/VBoxContainer"]
layout_mode = 2

[node name="WeaponName" type="Label" parent="WeaponInfos/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
label_settings = ExtResource("6_yd38f")

[node name="Ammo" type="Label" parent="WeaponInfos/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
label_settings = ExtResource("6_yd38f")

[node name="ContextComponent" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_36lb2")
default_icon = SubResource("CompressedTexture2D_yd38f")

[node name="HBoxContainer" type="HBoxContainer" parent="ContextComponent"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2

[node name="ContextIcon" type="TextureRect" parent="ContextComponent/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ContextLabel" type="Label" parent="ContextComponent/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_uwo1s")
